# cubeL4-rs_example

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  msp.c  msp.h
