[package]
authors = ["AP"]
edition = "2021"
readme = "README.md"
name = "cubeL4_example"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[build-dependencies]
cc = { version = "1.0.70", features = ["parallel"] }

[dependencies.cubeL4]
version = "*"
git = "https://github.com/apullin/cubeL4-rs.git"

# this lets you use `cargo fix`!
[[bin]]
name = "cubeL4_example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
